# kstack_pipeline

./: .gitignore  Dockerfile  Dockerfile_agent  Dockerfile_emr  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
infra/: main.tf  provider.tf  variables.tf
src/: create_deployment.py
src/flows/: prefect_flow.py  verify.py
